[gd_scene load_steps=13 format=3 uid="uid://cyhqkmqbamye2"]

[ext_resource type="Script" path="res://Login/LoginPage.gd" id="1_r4ltg"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://Global/BG.tscn" id="2_7yupd"]
[ext_resource type="Texture2D" uid="uid://b4kihrq7mv6sk" path="res://png/StartPage/logo-05.png" id="3_3owdf"]
[ext_resource type="FontFile" uid="uid://c8kfctqkt4qdk" path="res://png/font/大部分的字體/04B_30__.TTF" id="4_4ixtg"]

[sub_resource type="SystemFont" id="SystemFont_0o5s8"]
font_names = PackedStringArray("Constantia")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwk8o"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.45098, 0.388235, 0.341176, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="SystemFont" id="SystemFont_bv3e0"]
font_names = PackedStringArray("Constantia")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sawln"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.45098, 0.388235, 0.341176, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eegys"]

[sub_resource type="ImageTexture" id="ImageTexture_hgb7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cxi7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllus"]

[node name="LoginPage" type="Node2D"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.21, 0.21)
script = ExtResource("1_r4ltg")

[node name="BG" parent="." instance=ExtResource("2_7yupd")]

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(576, 133.571)
texture = ExtResource("3_3owdf")

[node name="Labels" type="VSplitContainer" parent="."]
offset_left = 331.0
offset_top = 215.571
offset_right = 557.0
offset_bottom = 330.571
theme_override_constants/separation = 25
split_offset = 45
dragger_visibility = 1

[node name="UserID" type="Label" parent="Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("4_4ixtg")
theme_override_font_sizes/font_size = 30
text = "Username"
vertical_alignment = 2

[node name="Password" type="Label" parent="Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("4_4ixtg")
theme_override_font_sizes/font_size = 30
text = "PASSWORD"
vertical_alignment = 2

[node name="InputBox" type="VSplitContainer" parent="."]
offset_left = 573.0
offset_top = 217.333
offset_right = 823.0
offset_bottom = 332.333
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 25
split_offset = 45
dragger_visibility = 1

[node name="UserID" type="LineEdit" parent="InputBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_0o5s8")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_bwk8o")
max_length = 50
secret_character = "*"

[node name="Password" type="LineEdit" parent="InputBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_bv3e0")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_sawln")
max_length = 50
secret = true
secret_character = "*"

[node name="LogIn" type="MarginContainer" parent="."]
offset_left = 486.0
offset_top = 386.858
offset_right = 666.0
offset_bottom = 426.858

[node name="LogInLabel" type="Label" parent="LogIn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("4_4ixtg")
theme_override_font_sizes/font_size = 35
text = "LOG IN"

[node name="LogIn" type="TouchScreenButton" parent="LogIn"]
position = Vector2(89, 16)
scale = Vector2(10, 2.5)
shape = SubResource("RectangleShape2D_eegys")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 474.0
offset_top = 458.382
offset_right = 674.0
offset_bottom = 488.382

[node name="or" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.658824, 0.615686, 0.533333, 1)
theme_override_fonts/font = ExtResource("4_4ixtg")
theme_override_font_sizes/font_size = 20
text = "or "

[node name="SignUp" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.08

[node name="SignUpLabel" type="Label" parent="HBoxContainer/SignUp"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 2.7
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("4_4ixtg")
theme_override_font_sizes/font_size = 22
text = "SIGN UP"

[node name="SignUp" type="TouchScreenButton" parent="HBoxContainer/SignUp"]
position = Vector2(67, 11)
scale = Vector2(7.3, 1.8)
texture_normal = SubResource("ImageTexture_hgb7g")
shape = SubResource("RectangleShape2D_7cxi7")

[node name="ForgottenPassword" type="MarginContainer" parent="."]
offset_left = 361.0
offset_top = 516.667
offset_right = 796.0
offset_bottom = 543.667

[node name="ForgottenPwLabel" type="Label" parent="ForgottenPassword"]
layout_mode = 2
theme_override_colors/font_color = Color(0.658824, 0.615686, 0.533333, 1)
theme_override_fonts/font = ExtResource("4_4ixtg")
theme_override_font_sizes/font_size = 20
text = "FORGOTTEN YOUR PASSWORD"

[node name="ForgottenPassword" type="TouchScreenButton" parent="ForgottenPassword"]
position = Vector2(214, 14)
scale = Vector2(22, 1.8)
shape = SubResource("RectangleShape2D_qllus")

[node name="Notice" type="MarginContainer" parent="."]
offset_left = 451.0
offset_top = 264.143
offset_right = 701.0
offset_bottom = 384.643

[node name="Black_BG" type="ColorRect" parent="Notice"]
layout_mode = 2
color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="Label" type="Label" parent="Notice"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="LogIn/LogIn" to="." method="_on_log_in_pressed"]
[connection signal="pressed" from="HBoxContainer/SignUp/SignUp" to="." method="_on_sign_up_pressed"]
[connection signal="pressed" from="ForgottenPassword/ForgottenPassword" to="." method="_on_forgotten_password_pressed"]
